--- a/web/css/main.css
+++ b/web/css/main.css
@@ -18,14 +18,25 @@
 @import url(//fonts.googleapis.com/earlyaccess/notosanstc.css);
 
 body {
-    font-family: 'oxxo', 'Noto Sans TC', '微軟正黑體', sans-serif;
+    font-family: 'Noto Sans TC', '微軟正黑體', sans-serif;
 }
 
-#main_title{
+.main_title{
     font-family: 'SentyTang', 'Noto Sans TC', '微軟正黑體',  sans-serif;
+    font-size: 400%;
 }
 
 
 .query_title {
     font-family: 'SentyTang';
+}
+
+.navbar {
+    font-family: 'SentyTang';
+    font-size: 150%;
+}
+
+.navbar-brand {
+    font-family: 'SentyTang';
+    font-size: 150%;
 }
