--- a/views/search.ejs
+++ b/views/search.ejs
@@ -362,35 +362,41 @@
         </div>
         <div class="col-sm-8" style="margin:30px">
             <!-- 新增一個query結果從這裡開始 -->
-            <div class="card bg-light">
-                <div class="row card-header bg-transparent">
-                    <div class="col-sm-8">
-                        <%= title %>
-                    </div>
-                    <div class="col-sm-4 text-right">
-                        <a href="#" class="badge badge-success"> <%= onSales %> </a>
-<!--                        <a href="#" class="badge badge-danger">{hitRate}</a>-->
-                    </div>
-                </div>
-                <div class="row card-body">
-                    <div class="col-sm-10 card-text">
-                        <p><%= startDat%a> ~ <%= startData%> 在<%= location%><%= locationName%></p>
-                        <p><%= descriptionFilterHtml%></p>
-                    </div>
-                    <div class="col-sm-2  card-text text-right">
-                        <p><%= price%></p>
-                        <p><%= onSales%></p>
-                    </div>
+            <% for(var i=0; i<result.length; i++) {%>
 
+                <div class="card bg-light">
+                    <div class="row card-header bg-transparent">
+                        <div class="col-sm-8">
+                            <%= result[i].title %>
+                        </div>
+                        <div class="col-sm-4 text-right">
+<!--                            <a href="#" class="badge badge-success"> <%= result[i].onSales %> </a>-->
+                        </div>
+                    </div>
+                    <div class="row card-body">
+                        <div class="col-sm-10 card-text">
+                            <p><%= result[i].startData%> ~ <%= result[i].endData%> </p>
+                            <p><%= result[i].descriptionFilterHtml%></p>
+                        </div>
+<!--
+                        <div class="col-sm-2  card-text text-right">
+                            <p><%= result[i].price%></p>
+                            <p><%= result[i].onSales%></p>
+                        </div>
+-->
+
+                    </div>
+                    <div class="card-footer text-right">
+                        <a href="#" class="card-link">查看更多...</a>
+                    </div>
                 </div>
-                <div class="card-footer text-right">
-                    <a href="#" class="card-link">查看更多...</a>
-                </div>
-            </div>
+                <br>
+            <% } %>
+            
             <!-- 新增一個query結果從這裡結束-->
-            <br>
-             <!-- active的部分待改 -->
-            <ul class="pagination"> 
+            
+            <!-- active的部分待改 -->
+            <ul class="pagination">
                 <li class="page-item"><a class="page-link" href="#">Previous</a></li>
                 <li class="page-item"><a class="page-link" href="#">1</a></li>
                 <li class="page-item active"><a class="page-link" href="#">2</a></li>
@@ -404,4 +410,6 @@
 
 
 
-</body></html>
+</body>
+
+</html>
