update html style
改jumbotron和navebar的部分以及連結

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,8 +1,8 @@
 @font-face {
-    font-family: 'oxxo';
+    font-family: 'GenJyuu';
     src:
-        url(../fonts/TaipeiSansTCBeta-Regular.ttf)  format('truetype'),
         url(../fonts/GenJyuuGothicL-Monospace-Regular.ttf)  format('truetype') ,
+        url(../fonts/TaipeiSansTCBeta-Regular.ttf)  format('truetype'),
         local("Arial");
 }
 
@@ -14,6 +14,9 @@
         url(../fonts/GenJyuuGothicL-Monospace-Regular.ttf)  format('truetype') ,
         local("Arial");
 }
+
+
+
 
 @import url(//fonts.googleapis.com/earlyaccess/notosanstc.css);
 
@@ -33,10 +36,39 @@ body {
 
 .navbar {
     font-family: 'SentyTang';
-    font-size: 150%;
+    font-size: 120%;
 }
 
 .navbar-brand {
     font-family: 'SentyTang';
+    font-size: 120%;
+}
+
+.group_info{
+    font-family: 'GenJyuu';
+    font-size: 100%;
+}
+
+.group_info_sm{
+    font-family: 'GenJyuu';
     font-size: 150%;
+    margin-left: 10px;
+}
+
+.result_title{
+    font-family: 'SentyTang', 'Noto Sans TC', '微軟正黑體',  sans-serif;
+    font-size: 300%;
+    margin-left: 10px;
+}
+/*
+
+.jumbotron {
+  padding-top: 20px;
+  padding-bottom: 10px;
+}
+*/
+
+.jumbotron_small {
+  padding-top: 20px;
+  padding-bottom: 10px;
 }
