--- a/views/search.ejs
+++ b/views/search.ejs
@@ -29,8 +29,14 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="summary.html">當月統計</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="recommend.html">次月推薦</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://hackmd.io/@db-group34/H11syOiu8/edit">Hackmd</a>
                 </li>
@@ -54,12 +60,13 @@
                         <a class="dropdown-item" href="https://data.gov.tw/dataset/6015">舞蹈表演資訊</a>
                         <a class="dropdown-item" href="https://data.gov.tw/dataset/6016">戲劇表演資訊</a>
                         <a class="dropdown-item" href="https://data.gov.tw/dataset/6017">音樂表演資訊</a>
+                        <!--                        <a class="dropdown-item" href="https://data.gov.tw/dataset/6018">其他藝文資訊</a>-->
                     </div>
                 </li>
 
             </ul>
         </div>
-        <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+        <div class="navbar-collapse collapse  order-3 dual-collapse2">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item justify-content-end justify-content-sm-end">
                     <a class="nav-link" href="">Group34 - 0511052 李其芳 0510141 何宜真 0516238 黃柏維 0616042 呂明哲</a>
@@ -401,28 +408,28 @@
                         <%= result[i].title %>
                     </div>
                     <div class="col-sm-4 text-right">
-                        <a href="#" class="badge badge-success">
-                            <svg class="bi bi-tag-fill" width="1em" height="1em" viewBox="0 0 20 20" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <% if(result[i].onSales=='Y') {%>
+                              <a href="#" class="badge badge-success">
+                                <svg class="bi bi-tag-fill" width="1em" height="1em" viewBox="0 0 20 20" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" d="M2 1a1 1 0 00-1 1v4.586a1 1 0 00.293.707l7 7a1 1 0 001.414 0l4.586-4.586a1 1 0 000-1.414l-7-7A1 1 0 006.586 1H2zm4 3.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0z" clip-rule="evenodd" />
-                            </svg>On Sale
-                        </a>
+                                </svg>On Sale
+                              </a>
+                        <% } %>
                     </div>
                 </div>
                 <div class="row card-body">
                     <div class="col-sm-10 card-text">
                         <p><%= result[i].startData%> ~ <%= result[i].endData%> </p>
-                        <p><%= result[i].descriptionFilterHtml%></p>
+                        <p><%= result[i].descriptionHTML%></p>
                     </div>
-                    <!--
-                        <div class="col-sm-2  card-text text-right">
-                            <p><%= result[i].price%></p>
-                            <p><%= result[i].onSales%></p>
-                        </div>
--->
+                    <div class="col-sm-2  card-text text-right">
+                        <p><%= result[i].price%></p>
+                        <p><%= result[i].onSales%></p>
+                    </div>
 
                 </div>
                 <div class="card-footer text-right">
-                    <a href="#" class="card-link">查看更多...</a>
+                    <a href="/info/<%= result[i].UID%>" class="card-link">查看更多...</a>
                 </div>
             </div>
             <br>
@@ -431,6 +438,7 @@
             <!-- 新增一個query結果從這裡結束-->
 
             <!-- active的部分待改 -->
+            <!--
             <ul class="pagination">
                 <li class="page-item"><a class="page-link" href="#">Previous</a></li>
                 <li class="page-item"><a class="page-link" href="#">1</a></li>
@@ -438,6 +446,7 @@
                 <li class="page-item"><a class="page-link" href="#">3</a></li>
                 <li class="page-item"><a class="page-link" href="#">Next</a></li>
             </ul>
+            -->
         </div>
         <br>
 
