--- a/views/search.ejs
+++ b/views/search.ejs
@@ -420,7 +420,7 @@
                 <div class="row card-body">
                     <div class="col-sm-10 card-text">
                         <p><%= result[i].startData%> ~ <%= result[i].endData%> </p>
-                        <p><%= result[i].descriptionHTML%></p>
+                        <p><%= result[i].descriptionFilterHtml%></p>
                     </div>
                     <div class="col-sm-2  card-text text-right">
                         <p><%= result[i].price%></p>
