--- a/views/info.ejs
+++ b/views/info.ejs
@@ -10,7 +10,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href=" https://fonts.googleapis.com/css?family=Noto+Sans+TC" type='text/css'>
-    <link rel="stylesheet" href="./css/main.css" id="maincss">
+    <link rel="stylesheet" href="/css/main.css" id="maincss">
 </head>
 
 <body>
