--- a/views/info.ejs
+++ b/views/info.ejs
@@ -41,20 +41,20 @@
                     <div class="row">
                         <p class="col-sm-10 card-text">類別:
                             <% 
-                                if (result.category === '1') { %> 音樂表演 <% } 
-                                else if (result.category === '2') { %> 戲劇表演 <% } 
-                                else if (result.category === '3') { %> 舞蹈表演 <% } 
-                                else if (result.category === '4') { %> 親子活動 <% } 
-                                else if (result.category === '5') { %> 獨立音樂 <% } 
-                                else if (result.category === '6') { %> 展覽資訊 <% } 
-                                else if (result.category === '7') { %> 講座資訊 <% } 
-                                else if (result.category === '8') { %> 電影 <% } 
-                                else if (result.category === '11') { %> 綜藝活動 <% }  
-                                else if (result.category === '13') { %> 競賽活動 <% } 
-                                else if (result.category === '14') { %> 徵選活動 <% } 
-                                else if (result.category === '15') { %> 其他藝文資訊 <% } 
-                                else if (result.category === '17') { %> 演唱會 <% } 
-                                else if (result.category === '19') { %> 文化部研習課程 <% } 
+                                if (result.category == '1') { %> 音樂表演 <% } 
+                                else if (result.category == '2') { %> 戲劇表演 <% } 
+                                else if (result.category == '3') { %> 舞蹈表演 <% } 
+                                else if (result.category == '4') { %> 親子活動 <% } 
+                                else if (result.category == '5') { %> 獨立音樂 <% } 
+                                else if (result.category == '6') { %> 展覽資訊 <% }
+                                else if (result.category == '7') { %> 講座資訊 <% } 
+                                else if (result.category == '8') { %> 電影 <% } 
+                                else if (result.category == '11') { %> 綜藝活動 <% }  
+                                else if (result.category == '13') { %> 競賽活動 <% } 
+                                else if (result.category == '14') { %> 徵選活動 <% }
+                                else if (result.category == '15') { %> 其他藝文資訊 <% } 
+                                else if (result.category == '17') { %> 演唱會 <% } 
+                                else if (result.category == '19') { %> 文化部研習課程 <% } 
                                 else { %> - <% } 
                             %>
                         </p>
