--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,17 +1,17 @@
 <!-- navbar -->
 
 <nav class="navbar navbar-expand-sm bg-light navbar-light">
-    <a class="navbar-brand" href="main.html" style='margin-left:30px'>首頁</a>
+    <a class="navbar-brand" href="/search" style='margin-left:30px'>首頁</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="summary.html">當月統計</a>
+                <a class="nav-link" href="/summary">當月統計</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="recommend.html">次月推薦</a>
+                <a class="nav-link" href="/recommend">次月推薦</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="https://hackmd.io/@db-group34/H11syOiu8/edit">Hackmd</a>
