Revert "Update search.ejs"
This reverts commit c5708b47ab07c64877ba17bfb04d30897f0646d7.

--- a/views/search.ejs
+++ b/views/search.ejs
@@ -41,7 +41,7 @@
                 </div>
                 <div class="row card-body">
                     <div class="col-sm-10 card-text">
-                        <p><%= result[i].startDate%> ~ <%= result[i].endDate%> </p>
+                        <p><%= result[i].startData%> ~ <%= result[i].endData%> </p>
                         <p><%= result[i].descriptionFilterHtml%></p>
                     </div>
                     <div class="col-sm-2  card-text text-right">
