--- a/views/sidemenu.ejs
+++ b/views/sidemenu.ejs
@@ -7,74 +7,76 @@
             <!--    東部欄位     -->
             <div class="form-check-inline">
                 <label class="form-check-label" for="check_cat1">
-                    <input type="checkbox" class="form-check-input" id="check_cat1" name="title" value="音樂表演資訊">音樂表演
+                    <input type="checkbox" class="form-check-input" id="check_cat1" name="title" value="1">音樂表演
                 </label>
             </div>
             <div class="form-check-inline">
                 <label class="form-check-label" for="check_cat2">
-                    <input type="checkbox" class="form-check-input" id="check_cat2" name="title" value="戲劇表演資訊">戲劇表演
+                    <input type="checkbox" class="form-check-input" id="check_cat2" name="title" value="2">戲劇表演
                 </label>
             </div>
             <div class="form-check-inline">
                 <label class="form-check-label" for="check_cat3">
-                    <input type="checkbox" class="form-check-input" id="check_cat3" name="title" value="舞蹈表演資訊">舞蹈表演
+                    <input type="checkbox" class="form-check-input" id="check_cat3" name="title" value="3">舞蹈表演
                 </label>
             </div>
             <div class="form-check-inline">
                 <label class="form-check-label" for="check_cat4">
-                    <input type="checkbox" class="form-check-input" id="check_cat4" name="title" value="親子活動">親子活動
+                    <input type="checkbox" class="form-check-input" id="check_cat4" name="title" value="4">親子活動
                 </label>
             </div>
             <div class="form-check-inline">
                 <label class="form-check-label" for="check_cat5">
-                    <input type="checkbox" class="form-check-input" id="check_cat5" name="title" value="獨立音樂">獨立音樂
+                    <input type="checkbox" class="form-check-input" id="check_cat5" name="title" value="5">獨立音樂
                 </label>
             </div>
             <div class="form-check-inline">
                 <label class="form-check-label" for="check_cat6">
-                    <input type="checkbox" class="form-check-input" id="check_cat6" name="title" value="展覽資訊">展覽資訊
+                    <input type="checkbox" class="form-check-input" id="check_cat6" name="title" value="6">展覽資訊
                 </label>
             </div>
             <div class="form-check-inline">
                 <label class="form-check-label" for="check_cat7">
-                    <input type="checkbox" class="form-check-input" id="check_cat7" name="title" value="講座資訊">講座資訊
+                    <input type="checkbox" class="form-check-input" id="check_cat7" name="title" value="7">講座資訊
                 </label>
             </div>
             <div class="form-check-inline">
                 <label class="form-check-label" for="check_cat8">
-                    <input type="checkbox" class="form-check-input" id="check_cat8" name="title" value="電影">電影
+                    <input type="checkbox" class="form-check-input" id="check_cat8" name="title" value="8">電影
                 </label>
             </div>
             <div class="form-check-inline">
                 <label class="form-check-label" for="check_cat11">
-                    <input type="checkbox" class="form-check-input" id="check_cat11" name="title" value="綜藝活動">綜藝活動
+                    <input type="checkbox" class="form-check-input" id="check_cat11" name="title" value="11">綜藝活動
                 </label>
             </div>
             <div class="form-check-inline">
                 <label class="form-check-label" for="check_cat13">
-                    <input type="checkbox" class="form-check-input" id="check_cat13" name="title" value="競賽活動">競賽活動
+                    <input type="checkbox" class="form-check-input" id="check_cat13" name="title" value="13">競賽活動
                 </label>
             </div>
             <div class="form-check-inline">
                 <label class="form-check-label" for="check_cat14">
-                    <input type="checkbox" class="form-check-input" id="check_cat14" name="title" value="徵選活動">徵選活動
+                    <input type="checkbox" class="form-check-input" id="check_cat14" name="title" value="14">徵選活動
                 </label>
             </div>
             <div class="form-check-inline">
                 <label class="form-check-label" for="check_cat15">
-                    <input type="checkbox" class="form-check-input" id="check_cat15" name="title" value="其他藝文資訊">其他藝文資訊
+                    <input type="checkbox" class="form-check-input" id="check_cat15" name="title" value="15">其他藝文資訊
                 </label>
             </div>
             <div class="form-check-inline">
                 <label class="form-check-label" for="check_cat17">
-                    <input type="checkbox" class="form-check-input" id="check_cat17" name="title" value="演唱會">演唱會
+                    <input type="checkbox" class="form-check-input" id="check_cat17" name="title" value="17">演唱會
                 </label>
             </div>
+<!--
             <div class="form-check-inline">
                 <label class="form-check-label" for="check_cat19">
-                    <input type="checkbox" class="form-check-input" id="check_cat19" name="title" value="文化部研習課程">文化部研習課程
+                    <input type="checkbox" class="form-check-input" id="check_cat19" name="title" value="19">文化部研習課程
                 </label>
             </div>
+-->
         </div>
 
         <h4>地區</h4>
@@ -84,91 +86,81 @@
 
             <div class="form-check-inline north">
                 <label class="form-check-label north" for="checkN1">
-                    <input type="checkbox" class="form-check-input" id="checkN1" name="district" value="Taipei">台北市
+                    <input type="checkbox" class="form-check-input" id="checkN1" name="district" value="台北">台北
                 </label>
             </div>
             <div class="form-check-inline north">
                 <label class="form-check-label north" for="checkN2">
-                    <input type="checkbox" class="form-check-input" id="checkN2" name="district" value="New_Taipei">新北市
+                    <input type="checkbox" class="form-check-input" id="checkN2" name="district" value="新北">新北
                 </label>
             </div>
             <div class="form-check-inline">
                 <label class="form-check-label" for="checkN3">
-                    <input type="checkbox" class="form-check-input" id="checkN3" name="district" value="Taoyuan">桃園市
+                    <input type="checkbox" class="form-check-input" id="checkN3" name="district" value="桃園">桃園
                 </label>
             </div>
             <div class="form-check-inline">
                 <label class="form-check-label" for="checkN4">
-                    <input type="checkbox" class="form-check-input" id="checkN4" name="district" value="Hsinchu">新竹市
-                </label>
-            </div>
-            <div class="form-check-inline">
-                <label class="form-check-label" for="checkN5">
-                    <input type="checkbox" class="form-check-input" id="checkN5" name="district" value="Hsinchu_">新竹縣
+                    <input type="checkbox" class="form-check-input" id="checkN4" name="district" value="新竹">新竹
                 </label>
             </div>
             <div class="form-check-inline">
                 <label class="form-check-label" for="checkN6">
-                    <input type="checkbox" class="form-check-input" id="checkN6" name="district" value="Keelung">基隆市
+                    <input type="checkbox" class="form-check-input" id="checkN6" name="district" value="基隆">基隆
                 </label>
             </div>
             <div class="form-check-inline">
                 <label class="form-check-label" for="checkN7">
-                    <input type="checkbox" class="form-check-input north" id="checkN7" name="district" value="Yilan">宜蘭縣
+                    <input type="checkbox" class="form-check-input north" id="checkN7" name="district" value="宜蘭">宜蘭
                 </label>
             </div>
 
             <!--    中部欄位     -->
             <div class="form-check-inline">
                 <label class="form-check-label" for="checkW1">
-                    <input type="checkbox" class="form-check-input" id="checkW1" name="district" value="Taichung">台中市
+                    <input type="checkbox" class="form-check-input" id="checkW1" name="district" value="台中">台中
                 </label>
             </div>
             <div class="form-check-inline">
                 <label class="form-check-label" for="checkW2">
-                    <input type="checkbox" class="form-check-input" id="checkW2" name="district" value="Changhua">彰化縣
+                    <input type="checkbox" class="form-check-input" id="checkW2" name="district" value="彰化">彰化
                 </label>
             </div>
             <div class="form-check-inline">
                 <label class="form-check-label" for="checkW3">
-                    <input type="checkbox" class="form-check-input" id="checkW3" name="district" value="Miaoli">苗栗縣
+                    <input type="checkbox" class="form-check-input" id="checkW3" name="district" value="苗栗">苗栗
                 </label>
             </div>
             <div class="form-check-inline">
                 <label class="form-check-label" for="checkW4">
-                    <input type="checkbox" class="form-check-input" id="checkW4" name="district" value="Yunlin">雲林縣
+                    <input type="checkbox" class="form-check-input" id="checkW4" name="district" value="雲林">雲林
                 </label>
             </div>
             <div class="form-check-inline">
                 <label class="form-check-label" for="checkW5">
-                    <input type="checkbox" class="form-check-input" id="checkW5" name="district" value="Nantou">南投縣
+                    <input type="checkbox" class="form-check-input" id="checkW5" name="district" value="南投">南投
                 </label>
             </div>
 
             <!--    南部欄位     -->
             <div class="form-check-inline">
                 <label class="form-check-label" for="checkS1">
-                    <input type="checkbox" class="form-check-input" id="checkS1" name="district" value="Kaohsiung">高雄市
+                    <input type="checkbox" class="form-check-input" id="checkS1" name="district" value="高雄">高雄
                 </label>
             </div>
             <div class="form-check-inline">
                 <label class="form-check-label" for="checkS2">
-                    <input type="checkbox" class="form-check-input" id="checkS2" name="district" value="Changhua">台南市
+                    <input type="checkbox" class="form-check-input" id="checkS2" name="district" value="台南">台南
                 </label>
             </div>
             <div class="form-check-inline">
                 <label class="form-check-label" for="checkS3">
-                    <input type="checkbox" class="form-check-input" id="checkS3" name="district" value="Chiayi">嘉義市
-                </label>
-            </div>
-            <div class="form-check-inline">
-                <label class="form-check-label" for="checkS4">
-                    <input type="checkbox" class="form-check-input" id="checkS4" name="district" value="Chiayi_">嘉義縣
+                    <input type="checkbox" class="form-check-input" id="checkS3" name="district" value="嘉義">嘉義
                 </label>
             </div>
             <div class="form-check-inline">
                 <label class="form-check-label" for="checkS5">
-                    <input type="checkbox" class="form-check-input" id="checkS5" name="district" value="Pingtung">屏東縣
+                    <input type="checkbox" class="form-check-input" id="checkS5" name="district" value="屏東">屏東
                 </label>
             </div>
 
@@ -176,27 +168,27 @@
 
             <div class="form-check-inline">
                 <label class="form-check-label" for="checkE1">
-                    <input type="checkbox" class="form-check-input" id="checkE1" name="district" value="Hualien">花蓮縣
+                    <input type="checkbox" class="form-check-input" id="checkE1" name="district" value="花蓮">花蓮
                 </label>
             </div>
             <div class="form-check-inline">
                 <label class="form-check-label" for="checkE2">
-                    <input type="checkbox" class="form-check-input" id="checkE2" name="district" value="Changhua">台東縣
+                    <input type="checkbox" class="form-check-input" id="checkE2" name="district" value="台東">台東
                 </label>
             </div>
             <div class="form-check-inline">
                 <label class="form-check-label" for="checkE3">
-                    <input type="checkbox" class="form-check-input" id="checkE3" name="district" value="Kinmen">金門縣
+                    <input type="checkbox" class="form-check-input" id="checkE3" name="district" value="金門">金門
                 </label>
             </div>
             <div class="form-check-inline">
                 <label class="form-check-label" for="checkE4">
-                    <input type="checkbox" class="form-check-input" id="checkE4" name="district" value="Penghu">澎湖縣
+                    <input type="checkbox" class="form-check-input" id="checkE4" name="district" value="澎湖">澎湖
                 </label>
             </div>
             <div class="form-check-inline">
                 <label class="form-check-label" for="checkE5">
-                    <input type="checkbox" class="form-check-input" id="checkE5" name="district" value="Lienchiang">連江縣
+                    <input type="checkbox" class="form-check-input" id="checkE5" name="district" value="連江">連江
                 </label>
             </div>
 
