--- a/views/recommend.ejs
+++ b/views/recommend.ejs
@@ -33,6 +33,7 @@
 
                     </div>
                 </div>
+                
                 <div class="card-body">
                     <div class="row media">
                         <% if(result.imageUrl!="") {%>
@@ -41,12 +42,31 @@
 
                     </div>
                     <div class="row">
+                        <p class="col-sm-10 card-text">類別:
+                            <% 
+                                if (result.category == '1') { %> 音樂表演 <% } 
+                                else if (result.category == '2') { %> 戲劇表演 <% } 
+                                else if (result.category == '3') { %> 舞蹈表演 <% } 
+                                else if (result.category == '4') { %> 親子活動 <% } 
+                                else if (result.category == '5') { %> 獨立音樂 <% } 
+                                else if (result.category == '6') { %> 展覽資訊 <% }
+                                else if (result.category == '7') { %> 講座資訊 <% } 
+                                else if (result.category == '8') { %> 電影 <% } 
+                                else if (result.category == '11') { %> 綜藝活動 <% }  
+                                else if (result.category == '13') { %> 競賽活動 <% } 
+                                else if (result.category == '14') { %> 徵選活動 <% }
+                                else if (result.category == '15') { %> 其他藝文資訊 <% } 
+                                else if (result.category == '17') { %> 演唱會 <% } 
+                                else if (result.category == '19') { %> 文化部研習課程 <% } 
+                                else { %> - <% } 
+                            %>
+                        </p>
                         <p class="col-sm-10 card-text">地點: <%= result.location%><%= result.locationName%></p>
                         <p class="col-sm-10 card-text">票價: <%= result.price%></p>
                         <p class="col-sm-10 card-text">折扣: <%= result.onSales%></p>
                         <p class="col-sm-10 card-text">場次: </p>
                         <p class="col-sm-10 card-text">主辦單位: <%= result.masterUnit%></p>
-                        <p class="col-sm-10 card-text">活動簡介: <%= result.descriptionFilterHtml%></p>
+                        <p class="col-sm-10 card-text">活動簡介: <%= result.discriptionFilter%></p>
                         <p class="col-sm-10 card-text">活動官網: <%= result.sourceWebName%></p>
                         <p class="col-sm-10 card-text">附註: <%= result.comment%></p>
                     </div>
