--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,7 +1,7 @@
 <!-- navbar -->
 
 <nav class="navbar navbar-expand-sm bg-light navbar-light">
-    <a class="navbar-brand" href="/search" style='margin-left:30px'>首頁</a>
+    <a class="navbar-brand" href="/main" style='margin-left:30px'>首頁</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
     </button>
