--- a/views/search.ejs
+++ b/views/search.ejs
@@ -22,32 +22,42 @@
         <%- include('sidemenu') %>
         <div class="col-sm-8" style="margin:30px">
             <!-- 新增一個query結果從這裡開始 -->
+            <% if(result.length>0) { %>
             <% for(var i=0; i<result.length; i++) {%>
 
             <div class="card bg-light">
-                <div class="row card-header bg-transparent">
-                    <div class="col-sm-8">
-                        <%= result[i].title %>
-                    </div>
-                    <div class="col-sm-4 text-right">
-                        <% if(result[i].onSales=='Y') {%>
-                              <a href="#" class="badge badge-success">
+                <div class="card-header bg-transparent">
+                    <div class="row">
+                        <div class="col-sm-8">
+                            <%= result[i].title %>
+                        </div>
+                        <div class="col-sm-4 text-right">
+                            <% if(result[i].onSales=='Y') {%>
+                            <a href="#" class="badge badge-success">
                                 <svg class="bi bi-tag-fill" width="1em" height="1em" viewBox="0 0 20 20" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd" d="M2 1a1 1 0 00-1 1v4.586a1 1 0 00.293.707l7 7a1 1 0 001.414 0l4.586-4.586a1 1 0 000-1.414l-7-7A1 1 0 006.586 1H2zm4 3.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0z" clip-rule="evenodd" />
+                                    <path fill-rule="evenodd" d="M2 1a1 1 0 00-1 1v4.586a1 1 0 00.293.707l7 7a1 1 0 001.414 0l4.586-4.586a1 1 0 000-1.414l-7-7A1 1 0 006.586 1H2zm4 3.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0z" clip-rule="evenodd" />
                                 </svg>On Sale
-                              </a>
-                        <% } %>
+                            </a>
+                            <% } %>
+                        </div>
                     </div>
+
                 </div>
-                <div class="row card-body">
-                    <div class="col-sm-10 card-text">
-                        <p><%= result[i].startDate%> ~ <%= result[i].endDate%> </p>
-                        <p><%= result[i].descriptionFilterHtml%></p>
-                    </div>
-                    <div class="col-sm-2  card-text text-right">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-sm-9 card-text">
+                            <p>時間: <%= result[i].startDate.getFullYear()%>年<%= result[i].startDate.getMonth() + 1%>月<%= result[i].startDate.getDate() %>日 ~ <%= result[i].endDate.getFullYear()%>年<%= result[i].endDate.getMonth() + 1%>月<%= result[i].endDate.getDate() %>日</p>
+                            <p><%= result[i].descriptionFilterHtml%></p>
+                            <p>票價: <%= result[i].price%></p>
+                        </div>
+                        <!--
+                    <div class="col-sm-3  card-text text-right">
                         <p><%= result[i].price%></p>
                         <p><%= result[i].onSales%></p>
                     </div>
+-->
+                    </div>
+
 
                 </div>
                 <div class="card-footer text-right">
@@ -56,7 +66,9 @@
             </div>
             <br>
             <% } %>
-
+            <% } else { %>
+            找不到符合搜尋條件的結果
+            <% } %>
             <!-- 新增一個query結果從這裡結束-->
 
             <!-- active的部分待改 -->
