--- a/views/sidemenu.ejs
+++ b/views/sidemenu.ejs
@@ -1,6 +1,6 @@
 <!-- sidemenu  -->
 <div class="col-sm-2" style="margin-top:30px; margin-left:50px">
-    <form action="search" method="get">
+    <form action="/search" method="get">
         <h4>種類</h4>
 
         <div style="margin:5px">
