--- a/views/info.ejs
+++ b/views/info.ejs
@@ -66,7 +66,12 @@
                         </p>
                         <p class="col-sm-10 card-text"> 主辦單位: <%= result.masterUnit%></p>
                         <p class="col-sm-10 card-text"> 購票網址:
-                            <a href="<%= result.webSales %>" class="card-link"> <%= result.sourceWebName%></a>
+                            <% if(result.webSales == "") { %>
+                                <a href="<%= result.sourceWebPromote %>" class="card-link"> <%= result.sourceWebName%></a>
+                            <% } else { %>
+                                <a href="<%= result.webSales %>" class="card-link"> <%= result.sourceWebName%></a>
+                            <% } %>
+                            
                         </p>
                         <p class="col-sm-10 card-text"> 場次:</p>
                         <div class="accordion" id="accordionExample">
@@ -78,7 +83,7 @@
                                         <button class="btn btn-link" type="button" data-toggle="collapse"
                                             data-target="#collapse-<%= i%>" aria-expanded="false"
                                             aria-controls="collapse-<%= i%>">
-                                            <p class="col-lg-10 card-text">
+                                            <p class="col-sm-10 card-text">
                                                 <%= result.showInfo[i].time.getFullYear()%>
                                                 <%= result.showInfo[i].time.getMonth()+1%>/<%=result.showInfo[i].time.getDate()%>(<% if (result.showInfo[i].time.getDay() == '0') { %>
                                                 日 <% } else if (result.showInfo[i].time.getDay() == '1') { %> 一
