--- a/views/info.ejs
+++ b/views/info.ejs
@@ -66,12 +66,14 @@
                         </p>
                         <p class="col-sm-10 card-text"> 主辦單位: <%= result.masterUnit%></p>
                         <p class="col-sm-10 card-text"> 購票網址:
-                            <% if(result.webSales == "") { %>
-                                <a href="<%= result.sourceWebPromote %>" class="card-link"> <%= result.sourceWebName%></a>
-                            <% } else { %>
+                            <% if(result.webSales != "") { %>
                                 <a href="<%= result.webSales %>" class="card-link"> <%= result.sourceWebName%></a>
+                                
+                            <% } else if(result.sourceWebPromote != "") { %>
+                                <a href="<%= result.sourceWebPromote %>" class="card-link"> <%= result.sourceWebName%></a>
+                            <% }  else {%>
+                               <!-- Handle both empty url fields-->
                             <% } %>
-                            
                         </p>
                         <p class="col-sm-10 card-text"> 場次:</p>
                         <div class="accordion" id="accordionExample">
